@@ -4,7 +4,8 @@ Changes
 1.3 (unreleased)
 ----------------
 
-* ...
+* Update APIs interfaces to include the new ``path`` directive and
+  new ``DirectoryResource`` component.
 
 1.2 (2008-10-16)
 ----------------
